Fix footer spacing on Home Radio and Reciter pages (#2932)
Enhance layout styling across multiple components

- Updated Footer component with a new background color.
- Added padding to flow class in radio and reciter pages for improved spacing.
- Refactored class names in radio and reciter components for consistency.
- Introduced flow class in reciter page styles for better layout management.

--- a/src/pages/radio.module.scss
+++ b/src/pages/radio.module.scss
@@ -16,6 +16,10 @@ $ribbon-text-color: #fff;
   margin-block-start: calc(3 * var(--spacing-mega));
 }
 
+.flow {
+  padding-block-end: var(--spacing-max);
+}
+
 .ribbon {
   position: absolute;
   inset-block-start: 0;
